[Fix] Handle b64 encoded element IDs and code cleanup